// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Leads > \`create\` > should invoke \`call\` 1`] = `
[
  [
    "crm.lead.add",
    {
      "fields": {
        "COMMENTS": "Some comment",
      },
      "params": {
        "REGISTER_SONET_EVENT": "Y",
      },
    },
  ],
]
`;

exports[`Leads > \`create\` > should work without optional params 1`] = `
[
  [
    "crm.lead.add",
    {
      "fields": {
        "COMMENTS": "Some comment",
      },
      "params": undefined,
    },
  ],
]
`;

exports[`Leads > \`get\` > should invoke \`call\` 1`] = `
[
  [
    "crm.lead.get",
    {
      "id": "77",
    },
  ],
]
`;

exports[`Leads > \`list\` > should invoke \`list\` 1`] = `
[
  [
    "crm.lead.list",
    {
      "filter": {
        ">PROBABILITY": 50,
      },
      "order": {
        "COMMENTS": "ASC",
      },
      "select": [
        "*",
        "UF_*",
      ],
      "start": 0,
    },
  ],
]
`;

exports[`Leads > \`list\` > should work without optional params 1`] = `
[
  [
    "crm.lead.list",
    {},
  ],
]
`;

exports[`Leads > \`update\` > should invoke \`call\` 1`] = `
[
  [
    "crm.lead.update",
    {
      "fields": {
        "COMMENTS": "Some comment",
      },
      "id": "77",
      "params": {
        "REGISTER_SONET_EVENT": "Y",
      },
    },
  ],
]
`;

exports[`Leads > \`update\` > should work without optional params 1`] = `
[
  [
    "crm.lead.update",
    {
      "fields": {
        "COMMENTS": "Some comment",
      },
      "id": "77",
      "params": undefined,
    },
  ],
]
`;

exports[`Leads > should expose API methods 1`] = `
{
  "create": [Function],
  "fields": [Function],
  "get": [Function],
  "list": [Function],
  "update": [Function],
}
`;
